@@ -2,20 +2,20 @@ package buggy;
 
 
 import java.io.BufferedReader;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class Reversi {
 
     int[][] playground;
-    int leftB = 0;
-    int leftW = 0;
+    private int leftB = 0;
+    private int leftW = 0;
     private int[] players = new int[] { 1, 0 };
     int onTurn = -1;
     int winner = -1;
@@ -28,7 +28,7 @@ public class Reversi {
         try {
             String[] gameConfig = readGameConfig(gameFilePath);
             initGame(gameConfig);
-            initTilesCount();
+            initPiecesCount();
         } catch (Exception e) {
             ended = true;
             System.out.println(e.getMessage());
@@ -59,7 +59,7 @@ public class Reversi {
         }
         try {
             if (gameConfig[0] == null || ! gameConfig[0].matches("[B|W]")) {
-                System.out.println("Incorrect player on turn input.");
+                System.out.println("Incorrect player on turn input");
                 return;
             }
             if ("B".equals(gameConfig[0])) {
@@ -74,23 +74,27 @@ public class Reversi {
                 }
             }
             for (int i = 1; i < 3; i++) {
-                String[] tiles = gameConfig[i].split(" ");
-                for (String tile : tiles) {
-                    if (!(tile.length() == 2 && tile.substring(0, 1).matches("[0-7]") &&  tile.substring(1, 2).matches("[0-7]"))) {
-                        System.out.println("Incorrect tile input");
+                String[] pieces = gameConfig[i].split(",");
+                for (String piece : pieces) {
+                    if (!piece.matches("[ ]*[0-9]+[ ]+[0-9]+[ ]*")) {
+                        System.out.println("Incorrect piece input");
                         return;
                     }
-                    int r = Integer.parseInt(tile.substring(1, 2));
-                    int c = Integer.parseInt(tile.substring(0, 1));
+                    String[] coordinates = piece.trim().split(" ");
+                    int r = Integer.parseInt(coordinates[0]);
+                    int c = Integer.parseInt(coordinates[1]);
+                    if (r >= 8 || c >= 8) {
+                        return;
+                    }
                     playground[r][c] = players[i - 1];
                 }
             }
         } catch (ArrayIndexOutOfBoundsException | NullPointerException e) {
-            System.out.println("Game configuration is incorrect.");
+            System.out.println("Game configuration is incorrect");
         }
     }
 
-    void initTilesCount() {
+    void initPiecesCount() {
         try {
             for (int r = 0; r < 8; r++) {
                 for (int c = 0; c <= 7; c++) {
@@ -111,43 +115,28 @@ public class Reversi {
         try {
             String line;
             while (!ended) {
-                printPlayground();
-                printTilesLeftCount();
+                PlaygroundPrinter.printPlayground(playground);
                 System.out.format("Make a move. %s is on turn\n", onTurn);
                 if (winner != -1) break;
                 if ((line = reader.readLine()) == null) break;
-                if (!(line.length() == 2 && line.substring(0, 1).matches("[0-7]") &&  line.substring(1, 2).matches("[0-7]"))) {
-                    System.out.println("Incorrect tile input");
+                if (!line.matches("[ ]*[0-9]+[ ]+[0-9]+[ ]*")) {
+                    System.out.println("Incorrect piece input");
                     return;
                 }
-                int r = Integer.parseInt(line.substring(0, 1));
-                int c = Integer.parseInt(line.substring(1, 2));
+                String[] coordinates = line.trim().split(" ");
+                int r = Integer.parseInt(coordinates[0]);
+                int c = Integer.parseInt(coordinates[1]);
                 move(r, c);
-                reader.close();
+                printPiecesLeftCount();
             }
+            reader.close();
         } catch (IOException e) {
             System.out.println("IO exception occurred on reading user input: " + e.getMessage());
         }
     }
 
-    private void printPlayground() {
-        System.out.println("  0 1 2 3 4 5 6 7");
-        for (int r = 0; r < 8; r++) {
-            System.out.print(r  + " ");
-            for (int c = 0; c < 8; c++) {
-                if (playground[r][c] == -1)
-                    System.out.print("_ ");
-                else if (playground[r][c] == 1)
-                    System.out.print("B ");
-                else
-                    System.out.print("W ");
-            }
-            System.out.println();
-        }
-    }
-
-    private void printTilesLeftCount() {
-        System.out.printf("Number of tiles: B: %s; W: %s\n\n", getLeftB(), getLeftW());
+    private void printPiecesLeftCount() {
+        System.out.printf("Number of pieces: B: %s; W: %s\n\n", getLeftB(), getLeftW());
     }
 
     int getLeftB() {
@@ -159,21 +148,12 @@ public class Reversi {
     }
 
     void move(int r, int c) {
-        if (!(r >= 0 && c >= 0 && r <= 7 && c < 8)) {
-            System.out.println("Move out of bounds is not permitted");
-            return;
-        }
-        if (playground[r][c] != -1) {
-            System.out.println("Move on not empty tile is not permitted");
-            return;
-        }
-
         if (winner != -1) {
             System.out.println("The game is over. No moves are permitted");
             return;
         }
 
-        ArrayList<List<Integer>> tilesToFlip = new ArrayList<>();
+        ArrayList<List<Integer>> piecesToFlip = new ArrayList<>();
         playground[r][c] = onTurn;
         int opposite = -1;
         if (onTurn == 0) opposite = 1;
@@ -188,7 +168,6 @@ public class Reversi {
             if (dirR >= 0 && dirC >= 0 && dirR < 8 && dirC < 8 && playground[dirR][dirC] != opposite) continue;
             dirR += direction[0];
             dirC += direction[1];
-            if (!(dirR >= 0 && dirC >= 0 && dirR < 8 && dirC < 8)) continue;
             while (playground[dirR][dirC] == opposite) {
                 dirR += direction[0];
                 dirC += direction[1];
@@ -200,29 +179,29 @@ public class Reversi {
                 dirR -= direction[0];
                 dirC -= direction[1];
                 if (dirR == r && dirC == c) break;
-                tilesToFlip.add(new ArrayList<>(List.of(dirR, dirC)));
+                piecesToFlip.add(new ArrayList<>(Arrays.asList(dirR, dirC)));
             }
         }
 
         playground[r][c] = -1;
-        if (tilesToFlip.size() != 0) {
-            tilesToFlip.add(new ArrayList<>(List.of(r, c)));
+        if (!piecesToFlip.isEmpty()) {
+            piecesToFlip.add(new ArrayList<>(Arrays.asList(r, c)));
         }
 
-        if (tilesToFlip.isEmpty()) {
+        if (piecesToFlip.isEmpty()) {
             System.out.println("Move is not permitted");
             return;
         }
-        for (List<Integer> tile : tilesToFlip) {
-            int tileR = tile.get(0);
-            int tileC = tile.get(1);
-            if (playground[tileR][tileC] == onTurn) break;
-            if (playground[tileR][tileC] == -1) {
-                playground[tileR][tileC] = onTurn;
+        for (List<Integer> piece : piecesToFlip) {
+            int pieceR = piece.get(0);
+            int pieceC = piece.get(1);
+            if (playground[pieceR][pieceC] == onTurn) break;
+            if (playground[pieceR][pieceC] == -1) {
+                playground[pieceR][pieceC] = onTurn;
                 if (onTurn == 1) leftB++;
                 else if (onTurn == 0) leftW++;
             } else {
-                playground[tileR][tileC] = onTurn;
+                playground[pieceR][pieceC] = onTurn;
                 if (onTurn == 1) {
                     leftB++;
                     leftW--;
@@ -236,7 +215,7 @@ public class Reversi {
         if (onTurn == 0) onTurn = 1;
         else if (onTurn == 1) onTurn = 0;
         if (! areValidMoves()) {
-            printTilesLeftCount();
+            printPiecesLeftCount();
             ended = true;
             if (getLeftB() > getLeftW()) winner = 1;
             else if (getLeftW() > getLeftB()) winner = 0;
@@ -244,11 +223,11 @@ public class Reversi {
     }
 
     boolean areValidMoves() {
-        ArrayList<String> tiles = new ArrayList<>();
+        ArrayList<String> pieces = new ArrayList<>();
         for (int r = 0; r < 8; r++) {
             for (int c = 0; c < 8; c++) {
                 if (playground[r][c] != -1) continue;
-                ArrayList<List<Integer>> toFLip = new ArrayList<>();
+                ArrayList<List<Integer>> toFlip = new ArrayList<>();
                 playground[r][c] = onTurn;
                 int opposite  = -1;
                 if (onTurn == 0) opposite = 1;
@@ -275,29 +254,25 @@ public class Reversi {
                         dirR -= direction[0];
                         dirC -= direction[1];
                         if (dirR == r && dirC == c) break;
-                        toFLip.add(new ArrayList<>(List.of(dirR, dirC)));
+                        toFlip.add(new ArrayList<>(Arrays.asList(dirR, dirC)));
                     }
                 }
 
                 playground[r][c] = -1;
-                if (!toFLip.isEmpty()) {
-                    toFLip.add(new ArrayList<>(List.of(r, c)));
+                if (!toFlip.isEmpty()) {
+                    toFlip.add(new ArrayList<>(Arrays.asList(r, c)));
                 }
-                if (toFLip.size() == 0) continue;
+                if (toFlip.isEmpty()) continue;
                 String rString = String.valueOf(r);
                 String cString = String.valueOf(c);
-                tiles.add(cString.concat(rString));
+                pieces.add(rString + " " + cString);
             }
         }
-        return tiles.size() != 0;
+        return !pieces.isEmpty();
     }
 
     public static void main(String[] args) {
-        String fileName = "game_8_b_init.txt.txt";
-
-        File gameFile = new File("./game_config_8/" + fileName);
-        Path gameFilePath = gameFile.toPath();
-
+        Path gameFilePath = GameConfig.game8bInit;
         Reversi rev = new Reversi(gameFilePath);
         rev.run();
 
